added performance improved file

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "test",
-  "short_name": "test",
+  "name": "test1",
+  "short_name": "test1",
   "icons": [
     {
       "src": "./img/icons/android-chrome-192x192.png",
